syntax = "proto3";

option go_package="proto";

message RegisterRequest {
    string CommitteePublicKey = 1;
    repeated string WantedMessages = 2;
    bytes CommitteeID = 3;
    string PeerID = 4;
    string Role = 5;
}

message UserRole {
    string Layer = 1;
    string Role = 2;
    int32 Shard = 3;
}

message RegisterResponse {
    repeated MessageTopicPair Pair = 1;
    UserRole Role = 2;
}

message MessageTopicPair {
    string Message = 1;
    repeated string Topic = 2;
    enum Action {
        PUBSUB = 0;
        PUB = 1;
        SUB = 2;
    }
    repeated Action Act = 3;
}

message GetBlockShardByHeightRequest {
    int32 Shard = 1;
    bool Specific = 2;
    uint64 FromHeight = 3;
    uint64 ToHeight = 4;
    repeated uint64 Heights = 5;
    bool FromPool = 6;
    int32 CallDepth = 7;
}

message GetBlockShardByHeightResponse {
    repeated bytes Data = 1;
}

message GetBlockShardByHashRequest {
    int32 Shard = 1;
    repeated bytes Hashes = 2;
    int32 CallDepth = 3;
}

message GetBlockShardByHashResponse {
    repeated bytes Data = 1;
}

message GetBlockBeaconByHeightRequest {
    bool Specific = 1;
    uint64 FromHeight = 2;
    uint64 ToHeight = 3;
    repeated uint64 Heights = 4;
    bool FromPool = 5;
    int32 CallDepth = 6;
}

message GetBlockBeaconByHeightResponse {
    repeated bytes Data = 1;
}

message GetBlockBeaconByHashRequest {
    repeated bytes Hashes = 1;
    int32 CallDepth = 2;
}

message GetBlockBeaconByHashResponse {
    repeated bytes Data = 1;
}

message GetBlockCrossShardByHeightRequest {
    int32 FromShard = 1;
    int32 ToShard = 2;
    bool Specific = 3;
    uint64 FromHeight = 4;
    uint64 ToHeight = 5;
    repeated uint64 Heights = 6;
    bool FromPool = 7;
    int32 CallDepth = 8;
}

message GetBlockCrossShardByHeightResponse {
    repeated bytes Data = 1;
}

message GetBlockShardToBeaconByHeightRequest {
    int32 FromShard = 1;
    bool Specific = 2;
    uint64 FromHeight = 3;
    uint64 ToHeight = 4;
    repeated uint64 Heights = 5;
    bool FromPool = 6;
    int32 CallDepth = 7;
}

message GetBlockShardToBeaconByHeightResponse {
    repeated bytes Data = 1;
}

message GetBlockCrossShardByHashRequest {
    int32 FromShard = 1;
    int32 ToShard = 2;
    repeated bytes Hashes = 3;
    int32 CallDepth = 4;
}

message GetBlockCrossShardByHashResponse {
    repeated bytes Data = 1;
}

service HighwayService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {};

    rpc GetBlockShardByHeight(GetBlockShardByHeightRequest) returns (GetBlockShardByHeightResponse) {};
    rpc GetBlockShardByHash(GetBlockShardByHashRequest) returns (GetBlockShardByHashResponse) {};
    rpc GetBlockBeaconByHeight(GetBlockBeaconByHeightRequest) returns (GetBlockBeaconByHeightResponse) {};
    rpc GetBlockBeaconByHash(GetBlockBeaconByHashRequest) returns (GetBlockBeaconByHashResponse) {};

    rpc GetBlockCrossShardByHeight(GetBlockCrossShardByHeightRequest) returns (GetBlockCrossShardByHeightResponse) {};
    rpc GetBlockShardToBeaconByHeight(GetBlockShardToBeaconByHeightRequest) returns (GetBlockShardToBeaconByHeightResponse) {};
    rpc GetBlockCrossShardByHash(GetBlockCrossShardByHashRequest) returns (GetBlockCrossShardByHashResponse) {};
}

message GetChainCommitteeRequest {
    int32 Epoch = 1;
    int32 CommitteeID = 2;
}

message GetChainCommitteeResponse {
    bytes Data = 1;
}

message GetHighwayInfosRequest {}

message HighwayInfo {
    string PeerInfo = 1;
    repeated int32 SupportShards = 2;
}

message GetHighwayInfosResponse {
    repeated HighwayInfo Highways = 1;
}

service HighwayConnectorService {
    rpc GetChainCommittee(GetChainCommitteeRequest) returns (GetChainCommitteeResponse) {};
    rpc GetHighwayInfos(GetHighwayInfosRequest) returns (GetHighwayInfosResponse) {};
}
